--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1304,7 +1304,7 @@ img{
 
       /*clear*/
 @media print, screen and (max-width: 767px) {
-  .introduction__map[data-astro-cid-ivdev4kk]{
+  .introduction__map{
     padding-left: 0;
     }
 
@@ -1385,7 +1385,7 @@ nav {
         padding: 0px 0px;
       }
       nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
-        font-size: 0.9rem;
+        font-size: 0.95rem;
       }
     }
      </style> 
