--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1302,15 +1302,14 @@ img{
     height: auto;
 }
 
-      /*clear*/
-@media print, screen and (max-width: 767px) {
-  .introduction__map{
+
+
+
+@media print, screen and (max-width: 767px){
+.introduction__map[data-astro-cid-v2cbyr3p] {
     padding-left: 0;
-    }
-
-
 }
-
+}
 
 
 nav {
