--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -30,12 +30,12 @@
               <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p><img src="/longwallet1-min.jpg" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p><iconify-icon icon="fluent:number-circle-1-48-filled" style="color: #434343;"></iconify-icon>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。他の革に比べて傷が目立ちにくく、メンテナンス(ブラッシングと乾拭きのみで十分です。)の手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
+              <p><iconify-icon icon="fluent:number-circle-1-48-filled" style="color: #434343;"></iconify-icon>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。他の革に比べて傷が目立ちにくく、メンテナンス(&thinsp;ブラッシングと乾拭きのみで十分です&thinsp;)の手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
               </p>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p><img loading="lazy" src="/sampleleather-min.jpg" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p> <iconify-icon icon="fluent:number-circle-2-48-filled" style="color: #434343;"></iconify-icon>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp">(仕入れから製作をするため、すべての色から選択ができます。）<br class="pc"><br class="pc"><br class="sp"><br class="sp"><iconify-icon icon="bx:down-arrow"></iconify-icon>&thinsp;次の画像をご覧ください。</p>
+              <p> <iconify-icon icon="fluent:number-circle-2-48-filled" style="color: #434343;"></iconify-icon>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）<br class="pc"><br class="pc"><br class="sp"><br class="sp"><iconify-icon icon="bx:down-arrow"></iconify-icon>&thinsp;次の画像をご覧ください。</p>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p><img loading="lazy" src="/aefeaaef-min.jpg" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
@@ -137,6 +137,10 @@
 
 .newsTop_category {
   margin: 0 20px 0 0;
+  font-size: 1rem;
+  font-family: 'Shippori Mincho', sans-serif;
+
+
 }
 
 .newsTop_date {
@@ -150,12 +154,12 @@
 }
 @media print, screen and (min-width: 768px) and (max-width: 1024px) {
   .newsTop_title {
-    font-size: 20px;
+    font-size: 1.6rem;
   }
 }
 @media print, screen and (max-width: 767px) {
   .newsTop_title {
-    font-size: 18px;
+    font-size: 1.6rem;
   }
 }
 
@@ -203,6 +207,9 @@
 }
 .newsEditor p {
   line-height: 2;
+  font-size: 0.9rem;
+  font-family: 'Shippori Mincho', sans-serif;
+
 }
 .newsEditor a {
   color: #003EA2;
@@ -245,22 +252,6 @@
 }
 
 
-.newsOther {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 40px;
-}
-
-
-.newsOther_title {
-  font-family: "neue-haas-grotesk-display", MyYuGothicM, "游ゴシック", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
-  font-size: 40px;
-  line-height: 1.3;
-  width: 33.3333%;
-  width: 33.3333333333%;
-  margin: 0 40px 0 0;
-}
 
 
 @media print, screen and (max-width: 767px) {
@@ -296,33 +287,13 @@
   .newsEditor {
     width: auto;
     margin: 60px 20px 0;
-  }
-}
+    font-size: 0.95rem;
 
-@media print, screen and (max-width: 767px) {
-  .newsOther {
-    display: block;
-    margin: 0 20px;
   }
-}
 
-@media print, screen and (max-width: 767px) {
-  .newsOther {
-    display: block;
-    margin: 0 20px;
-  }
-}
+  .newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
+    font-size: 0.95rem;
 
-@media print, screen and (min-width: 768px) and (max-width: 1024px) {
-  .newsOther_title {
-    font-size: 30px;
-  }
-}
-@media print, screen and (max-width: 767px) {
-  .newsOther_title {
-    font-size: 24px;
-    width: auto;
-    margin: 0 0 40px;
   }
 }
 
@@ -379,16 +350,22 @@ p{
     border-style: solid;
     border-width: 0
 }
-
 html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent
-}
+          line-height: 1.15;
+          -webkit-text-size-adjust: 100%;
+          -webkit-tap-highlight-color: transparent
+      }
+      
+      body {
+          margin: 0;
+          color: #333;
+          -moz-osx-font-smoothing: grayscale;
+       -webkit-font-smoothing: antialiased;
+       text-rendering: optimizeLegibility;
+       font-family: 'Shippori Mincho', sans-serif;
 
-body {
-    margin: 0
-}
+      }
+      
 
 main {
     display: block
