--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -294,6 +294,11 @@
   .newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
     font-size: 0.95rem;
 
+    font-family: "Shippori Mincho B1",serif;
+    line-height: 2.3076923077;
+    margin-top: 3.125rem;
+    letter-spacing: .05em;
+
   }
 }
 
@@ -301,7 +306,7 @@
 
 
 p{
-    font-family: "Shippori Mincho B1",serif;
+  font-family: "Shippori Mincho B1",serif;
     line-height: 2.3076923077;
     margin-top: 3.125rem;
     transition: .6s 1s;
