--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -100,6 +100,10 @@
                 font-weight: 700;
                 transition-property: color,background;
                 transition-duration: .3s
+                font-family: "Shippori Mincho B1",serif;
+    line-height: 2.3076923077;
+    font-size: 0.9rem;
+    letter-spacing: .05em;
             }
 
             @media screen and (min-width: 768px) {
