--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -28,18 +28,15 @@
               <div class="newsEditor">
                 <p>Pirca Mabuiでは、主に2種類の表面のスクラッチ加工が特徴のショルダー革を取り扱っています。</p>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
               <p><img src="/longwallet1-min.jpg" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p><iconify-icon icon="fluent:number-circle-1-48-filled" style="color: #434343;"></iconify-icon>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。他の革に比べて傷が目立ちにくく、メンテナンス(&thinsp;ブラッシングと乾拭きのみで十分です&thinsp;)の手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
+              <p>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。他の革に比べて傷が目立ちにくく、メンテナンス(&thinsp;ブラッシングと乾拭きのみで十分です&thinsp;)の手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
               </p>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
               <p><img loading="lazy" src="/sampleleather-min.jpg" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p> <iconify-icon icon="fluent:number-circle-2-48-filled" style="color: #434343;"></iconify-icon>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）<br class="pc"><br class="pc"><br class="sp"><br class="sp"><iconify-icon icon="bx:down-arrow"></iconify-icon>&thinsp;次の画像をご覧ください。</p>
-              <p>&nbsp;</p>
+              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）<br class="pc"><br class="pc"><br class="sp"><br class="sp">⬇&thinsp;次の画像をご覧ください。</p>
               <p>&nbsp;</p>
               <p><img loading="lazy" src="/aefeaaef-min.jpg" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc"><iconify-icon icon="fluent-mdl2:shop"></iconify-icon>
+              <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">
                 PRODUCT・<a href="/product">商品リストをみる</a></p>
             
               </div>
@@ -179,18 +176,9 @@
 }
 
 
-.newsTop_shareList {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
 
 .newsTop_shareList_node {
   margin: 0 5px;
-}
-.newsTop_shareList_node svg {
-  width: 30px;
-  height: 24px;
 }
 
 .newsVisual {
@@ -207,7 +195,7 @@
 }
 .newsEditor p {
   line-height: 2;
-  font-size: 0.9rem;
+  font-size: 0.92rem;
   font-family: 'Shippori Mincho', sans-serif;
 
 }
