--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -71,18 +71,18 @@
 
 @media screen and (max-width: 767px) {
                 .about__button[data-astro-cid-j7pv25f6] {
-                    margin-top:48px
+                    margin-top:48px;
                 }
             }
 
             @media screen and (min-width: 768px) {
                 .about__button[data-astro-cid-j7pv25f6] {
-                    margin-top:40px
+                    margin-top:40px;
                 }
             }
 
             .skill__list[data-astro-cid-j7pv25f6] {
-                display: grid
+                display: grid;
             }
 
          
@@ -99,35 +99,35 @@
                 border: 2px solid var(--color-primary);
                 font-weight: 700;
                 transition-property: color,background;
-                transition-duration: .3s
+                transition-duration: .3s;
+
                 font-family: "Shippori Mincho B1",serif;
-    line-height: 2.3076923077;
     font-size: 0.9rem;
-    letter-spacing: .05em;
+
             }
 
             @media screen and (min-width: 768px) {
                 .button[data-astro-cid-vnzlvqnm] {
                     padding:10px 24px;
-                    min-width: 240px
+                    min-width: 240px;
                 }
             }
 
             @media screen and (max-width: 767px) {
                 .button[data-astro-cid-vnzlvqnm] {
                     padding:10px 0px;
-                    width: 100%
+                    width: 100%;
                 }
             }
 
             @media (hover: hover) {
                 .button[data-astro-cid-vnzlvqnm]:where(:any-link,:enabled,summary):hover {
                     background:var(--color-primary);
-                    color: var(--color-secondary)
+                    color: var(--color-secondary);
                 }
 
                 .button[data-astro-cid-vnzlvqnm]:where(:any-link,:enabled,summary):hover .button__icon[data-astro-cid-vnzlvqnm] {
-                    translate: 5px
+                    translate: 5px;
                 }
             }
 
@@ -136,12 +136,12 @@
                 height: 100%;
                 rotate: 90deg;
                 flex-shrink: 0;
-                transition: translate .3s
+                transition: translate .3s;
             }
 
             @media screen and (min-width: 768px) {
                 .center[data-astro-cid-vnzlvqnm] {
-                    margin-inline:auto
+                    margin-inline:auto;
                 }
             }
 
@@ -158,7 +158,7 @@
     --content-width-small: 800px;
     --content-width-medium: 1200px;
     --headerHeight: 100px;
-    --headerHeight-sp: 80px
+    --headerHeight-sp: 80px;
 }
 
 
@@ -166,26 +166,26 @@
 
 img.fit {
     width: 100%;
-    height: auto
+    height: auto;
 }
 
 img.cover {
     width: 100%;
     height: 100%;
-    object-fit: cover
+    object-fit: cover;
 }
 
 
 
 
 .contents {
-    margin-top: 40px
+    margin-top: 40px;
 }
 
 
 
 .textCenter {
-    text-align: center
+    text-align: center;
 }
 
 
@@ -202,23 +202,23 @@ img.cover {
         height: clamp(56px,15vw,64px);
         border-radius: 50%;
         background: var(--color-primary);
-        color: var(--color-secondary)
+        color: var(--color-secondary);
     }
 }
 
 @media screen and (min-width: 768px) {
     ._button_1jidj_146 {
-        display:none
+        display:none;
     }
 }
 
 ._button_1jidj_146[aria-expanded=true] {
     color: var(--color-primary);
-    background: var(--color-secondary)
+    background: var(--color-secondary);
 }
 
 ._button_1jidj_146[aria-expanded=true] ._button__icon_1jidj_169:before,._button_1jidj_146[aria-expanded=true] ._button__icon_1jidj_169:after {
-    background: var(--color-primary)
+    background: var(--color-primary);
 }
 
 @media screen and (max-width: 767px) {
@@ -226,7 +226,7 @@ img.cover {
         position:absolute;
         inset: 0;
         width: 100%;
-        height: 100%
+        height: 100%;
     }
 
     ._button__icon_1jidj_169:before,._button__icon_1jidj_169:after {
@@ -236,47 +236,47 @@ img.cover {
         display: inline-block;
         background: var(--color-secondary);
         height: 2px;
-        border-radius: 24px
+        border-radius: 24px;
     }
 
     ._button__icon_1jidj_169:before {
         top: 18px;
-        width: 20px
+        width: 20px;
     }
 
     ._button__icon_1jidj_169:after {
         top: 26px;
-        width: 30px
+        width: 30px;
     }
 }
 
 @media screen and (max-width: 767px) {
     ._button__text_1jidj_200 {
-        font-size:14px
+        font-size:14px;
     }
 }
 
 ._root_1j163_1 {
     display: flex;
-    gap: 20px
+    gap: 20px;
 }
 
 ._root_1j163_1 a {
     display: block;
     width: 20px;
     height: 20px;
-    transition: scale .3s
+    transition: scale .3s;
 }
 
 @media (hover: hover) {
     ._root_1j163_1 a:where(:any-link,:enabled,summary):hover {
-        scale:1.2
+        scale:1.2;
     }
 }
 
 ._root_1j163_1 svg {
     width: 100%;
-    height: 100%
+    height: 100%;
 }
 
 
@@ -285,7 +285,7 @@ img.cover {
 
 @media screen and (max-width: 767px) {
     .contentsLayout[data-astro-cid-scuu7fyy] {
-        padding:0 16px
+        padding:0 16px;
     }
 }
 
@@ -346,7 +346,7 @@ img.cover {
 
 
 .summary-box.column h1 {
-  margin-top: 80px;
+  margin-top: 50px;
     font-size: 1.8rem;
     line-height: 2.0;
 
