--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -102,7 +102,7 @@
                 transition-duration: .3s;
 
                 font-family: "Shippori Mincho B1",serif;
-    font-size: 0.9rem;
+                font-size: 0.9rem;
 
             }
 
@@ -136,7 +136,7 @@
                 height: 100%;
                 rotate: 90deg;
                 flex-shrink: 0;
-                transition: translate .3s;
+                transition: translate .3s
             }
 
             @media screen and (min-width: 768px) {
