--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1306,8 +1306,9 @@ img{
 
 
 @media print, screen and (max-width: 767px){
+  .introduction__map[data-astro-cid-ivdev4kk]{
 
-  .introduction__map[data-astro-cid-v2cbyr3p]{
+    margin-right: 0;
     padding-left: 0;
 }
 
