--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -21,7 +21,7 @@
     </div>
     
     <figure class="introduction__map astro-HR23OLMI">
-    <img src="/fleeee-min.png" alt="革のメーカー" class="astro-HR23OLMI">
+    <img src="/fleeee-min.webp" alt="革のメーカー" class="astro-HR23OLMI">
             <br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span>  </center>
           </figure>
  
@@ -40,7 +40,7 @@
         <br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。
         <br class="sp"><br class="u-pc-only"><iconify-icon icon="fluent:number-circle-2-48-filled" style="color: #434343;"></iconify-icon>SGS国際検査に認証され、かつヨーロッパEN71-3安全基準を満たしており、丈夫で摩擦に強く、滑らかな糸通りと鮮やかな色を保つ高品質の麻糸です。</p></div>
       <figure class="introduction__map astro-HR23OLMI">
-      <img src="/fefeknfefee-min.jpg" alt="革のメーカー" class="astro-HR23OLMI">
+      <img src="/fefeknfefee-min.webp" alt="革のメーカー" class="astro-HR23OLMI">
               <br><center><span style="color: #999999;">画像引用:https://filauchinois.com/</span>  </center>
             </figure>
     </div>
@@ -58,7 +58,7 @@
         </div>
         
         <figure class="introduction__map astro-HR23OLMI">
-        <img src="/fehhfhehfee-min.jpg" alt="革のメーカー" class="astro-HR23OLMI">
+        <img src="/fehhfhehfee-min.webp" alt="革のメーカー" class="astro-HR23OLMI">
                 <br><center><span style="color: #999999;">画像引用:https://www.prym.com/</span>  </center>
               </figure>
       </div>
@@ -111,12 +111,17 @@
                     padding:10px 24px;
                     min-width: 240px;
                 }
+             
+                
             }
 
             @media screen and (max-width: 767px) {
                 .button[data-astro-cid-vnzlvqnm] {
                     padding:10px 0px;
                     width: 100%;
+                }
+                .button__icon[data-astro-cid-v2cbyr3p][data-astro-cid-vnzlvqnm] {
+                    display: none;
                 }
             }
 
