--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -54,7 +54,7 @@
   <li class="c-bannerList_node">
     <a href="/products">
       <div class="c-bannerList_img">
-        <img src="/mainpic.jpg" alt="当店のサービス画像" >
+        <img src="/afheaufhhf.webp" alt="当店の商品画像" >
       </div>
 <h3 class="c-bannerList_title">PRODUCT</h3>
       <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。</p>
@@ -63,7 +63,7 @@
   <li class="c-bannerList_node">
     <a href="/patterorder">
       <div class="c-bannerList_img">
-        <img src="/samale-min.jpg" alt="パターンオーダーの画像">
+        <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
       <h3 class="c-bannerList_title">PATTERN ORDER</h3>
       <p class="c-bannerList_text">様々な素材の中からお好みの革の色、金具などをお選びいただいて革小物を製作するセミオーダーを承っております。</p>
@@ -72,7 +72,7 @@
   <li class="c-bannerList_node">
     <a href="/kodawari">
       <div class="c-bannerList_img">
-        <img src="/sampleleather-min.jpg" alt="当店の画像について">
+        <img src="/sampleleather-min.webp" alt="当店の画像について">
       </div>
       <h3 class="c-bannerList_title">ABOUT LEATHER</h3>
       <p class="c-bannerList_text">主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。</p>
