--- a/src/components/Web.astro
+++ b/src/components/Web.astro
@@ -396,7 +396,7 @@ body {
     line-height: 2.3076923077;
     margin-top: 3.125rem;
     transition: .6s 1s;
-    font-size: 0.95rem;
+    font-size: 0.98rem;
     letter-spacing: .05em;
 }
 
@@ -855,7 +855,7 @@ px
     line-height: 2.3076923077;
     margin-top: 3.125rem;
     transition: .6s 1s;
-    font-size: 1.1rem;
+    font-size: 1rem;
     letter-spacing: .05em;
 }
 }
@@ -1023,17 +1023,19 @@ img.cover {
 ._root_10va8_1 {
     font-weight: 700;
     line-height: 1.2;
+    font-family: "Shippori Mincho B1",serif;
+
 }
 
 @media print, screen and (max-width: 767px) {
     ._root_10va8_1 {
-        font-size:40px;
+        font-size:2.5rem;
     }
 }
 
 @media screen and (min-width: 768px) {
     ._root_10va8_1 {
-        font-size:64px;
+        font-size:3.8rem;
     }
 }
 
