--- a/src/components/Web.astro
+++ b/src/components/Web.astro
@@ -393,7 +393,7 @@ body {
 
 .bun{
     font-family: "Shippori Mincho B1",serif;
-    line-height: 2.3076923077;
+    line-height:1.8;    
     margin-top: 3.125rem;
     transition: .6s 1s;
     font-size: 0.98rem;
@@ -787,7 +787,7 @@ p{
 
 
 .ti2{
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 700;
     line-height: 1.2;
@@ -795,7 +795,7 @@ p{
 }
 
 .ti21{
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 700;
     line-height: 1.2;
@@ -809,7 +809,7 @@ p{
 
 
 .ti22{
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 700;
     line-height: 1.2;
@@ -825,21 +825,17 @@ p{
 
 @media print, screen and (max-width: 767px) {
 
-    p{
-        margin-top: 1.25rem;
-    text-align: left;
-    font-size: 0.95rem;
-}
+ 
     .ti2{
-        font-size: 3.5rem;
+        font-size: 3rem;
   }
 
   .ti22{
-        font-size: 3.5rem;
+        font-size: 3rem;
   }
+
   .button[data-astro-cid-vnzlvqnm] {
-    padding: 14px
-px
+    padding: 14px px
  20px;
     width: 100%;
 }
@@ -852,7 +848,7 @@ px
 
 .bun{
     font-family: "Shippori Mincho B1",serif;
-    line-height: 2.3076923077;
+    line-height: 1.8;
     margin-top: 3.125rem;
     transition: .6s 1s;
     font-size: 1rem;
