--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1349,8 +1349,8 @@ nav {
   
     .nav-content .nav-links {
       display: flex;
-      padding-right: 20px;
-
+      margin: 0;
+    padding: 10px;
     }
   
 
