--- a/src/components/Web.astro
+++ b/src/components/Web.astro
@@ -15,8 +15,7 @@
           </div>
           <ul class="nav-links">
             <li><a href="/">ホーム</a></li>
-            <li><a href="/conntractweb.pdf">契約</a></li>
-            <li><a href="#">流れ</a></li>
+            <li><a href="#">契約の流れ</a></li>
           </ul>
         </div>
       </nav>
@@ -29,12 +28,10 @@
                         <div class="about__image" data-astro-cid-j7pv25f6="">
                          <img src="/againere.webp" alt="my-icon" class="fit" data-astro-cid-j7pv25f6="" width="280" height="280" loading="lazy" decoding="async"></div>
                          <p class="bun" data-astro-cid-j7pv25f6="">
-                            北海道を拠点に、フリーランスWebエンジニアをやっています。<br data-astro-cid-j7pv25f6="">
-                            <br class="sp">
-                           WEBフレームワークとして主にAstroを使用して構築をしていきます。
+                            北海道を拠点に、フリーランスWebエンジニアをやっています。<br class="sp">WEBフレームワークとして主にAstroを使用して構築をしていきます。
                             </p>
                             <p class="bun" data-astro-cid-j7pv25f6="">
-                                CMSであるWordpressを使ったWEBサイト案件の制作も可能です。<br class="sp"><br data-astro-cid-j7pv25f6="">ご予算に合わせてプランをご選択できます。<br class="sp">お気軽にご相談下さい!
+                                CMSであるWordpressを使ったWEBサイト案件の制作も可能です。<br class="sp">ご予算に合わせてプランをご選択できます。<br class="sp"><br class="sp">お気軽にご相談下さい!
 
                             </p></div>
                             
@@ -393,7 +390,7 @@ body {
 
 .bun{
     font-family: "Shippori Mincho B1",serif;
-    line-height:1.8;    
+    line-height:1.7;    
     margin-top: 3.125rem;
     transition: .6s 1s;
     font-size: 0.98rem;
@@ -470,13 +467,13 @@ ul, ol {
     line-height: 2.3076923077;
     margin-top: 3.125rem;
     transition: .6s 1s;
-    font-size: 0.95rem;
+    font-size: 1rem;
     letter-spacing: .05em;
 }
 
 .plan__detail {
     margin-top: 30px;
-    padding: 32px 60px;
+    padding: 30px 50px;
     background-color: #f8f8f8;
     
 }
@@ -496,6 +493,8 @@ ul, ol {
 
 .plan__detail__atention {
     margin-top: 16px;
+    font-size: 1rem;
+
 }
 
 .plan__detail {
@@ -760,7 +759,7 @@ a {
 
 p{
     font-family: "Shippori Mincho B1",serif;
-    line-height: 2.3076923077;
+    line-height: 1.7;
     margin-top: 3.125rem;
     transition: .6s 1s;
     font-size: 0.9rem;
@@ -848,7 +847,7 @@ p{
 
 .bun{
     font-family: "Shippori Mincho B1",serif;
-    line-height: 1.8;
+    line-height: 1.7;
     margin-top: 3.125rem;
     transition: .6s 1s;
     font-size: 1rem;
