--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1335,8 +1335,8 @@ nav {
       margin: auto;
       display: flex;
       align-items: center;
-      justify-content: center;
-    }
+      justify-content: flex-end;  
+      }
   
     nav .logo a {
       font-weight: 500;
