--- a/src/components/Web.astro
+++ b/src/components/Web.astro
@@ -1373,8 +1373,8 @@ nav {
       margin: auto;
       display: flex;
       align-items: center;
-      justify-content: center;
-      padding: 10px;
+      justify-content: flex-end;
+            padding: 10px;
     }
   
     nav .logo a {
