--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ import '@fontsource/shippori-mincho';
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 
-		<title>公式 Pirca Mabui</title>
+		<title>Pirca Mabui</title>
 		<meta name="description" content="北海道-革製品ハンドメイドのオンラインストアです。鞄、財布、キーケース、ミニマムな財布まで、革のパーツごとを素材別で選択ができるため、唯一無二の「とくべつな色」をお届けします。" />
 		<meta name="format-detection" content="telephone=no" />
 
