--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,8 +33,8 @@ nav {
       margin: auto;
       display: flex;
       align-items: center;
-      justify-content: center;
-    }
+      justify-content: flex-end; 
+       }
   
     nav .logo a {
       font-weight: 500;
