--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -30,7 +30,7 @@
   </section>
   </div>
 
-  
+  <br class="sp"> <br class="sp">
   <section class="introduction astro-HR23OLMI">
     <div class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
@@ -46,7 +46,7 @@
     </div>
     </section>
     
-  
+    <br class="sp"> <br class="sp">
 
     <section class="introduction astro-HR23OLMI">
       <div class="introduction__container astro-HR23OLMI">
