--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -27,6 +27,7 @@
           <li><a href="/">ホーム</a></li>
           <li><a href="/kodawari">こだわり</a></li>
           <li><a href="#">商品</a></li>
+          <li><a href="#">English</a></li>
         </ul>
       </div>
     </nav>
@@ -1336,6 +1337,8 @@ nav {
       display: flex;
       align-items: center;
       justify-content: flex-end;  
+      padding: 5px;
+
       }
   
     nav .logo a {
