--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,7 @@
         <li><a href="/">ホーム</a></li>
         <li><a href="/kodawari">こだわり</a></li>
         <li><a href="#">商品</a></li>
+        <li><a href="#">English</a></li>
       </ul>
     </div>
   </nav>
