--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -13,8 +13,8 @@
                   <h1 class="newsTop_title">
                     取扱いの革について   </h1>
                   <div class="newsTop_share">
-                    <div class="newsTop_shareTitle"><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">Instagram</a><iconify-icon icon="fa6-brands:instagram"></iconify-icon>
-
+                    <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
+                      height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
                     </div>
                
                   </div>
@@ -36,7 +36,8 @@
               <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）<br class="pc"><br class="pc"><br class="sp"><br class="sp">⬇&thinsp;次の画像をご覧ください。</p>
               <p>&nbsp;</p>
               <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">
+              <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
+                height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
                 PRODUCT・<a href="/product">商品リストをみる</a></p>
             
               </div>
