--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -524,14 +524,20 @@ img.cover {
 }
 
 html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent
-}
+          line-height: 1.15;
+          -webkit-text-size-adjust: 100%;
+          -webkit-tap-highlight-color: transparent
+      }
+      
+      body {
+          margin: 0;
+          color: #333;
+          -moz-osx-font-smoothing: grayscale;
+       -webkit-font-smoothing: antialiased;
+       text-rendering: optimizeLegibility;
+       font-family: 'Shippori Mincho', sans-serif;
 
-body {
-    margin: 0
-}
+      }
 
 main {
     display: block
