--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -65,7 +65,7 @@
       <section class="introduction astro-HR23OLMI">
         <div class="introduction__container astro-HR23OLMI">
           <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-          <h2 class="introduction__heading astro-HR23OLMI">amiet社（スイス）</h2>
+          <h2 class="introduction__heading astro-HR23OLMI">Amiet社（スイス）</h2>
           <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp">amiet社は、ブリーフケースやアタッシュケースなどに使われる「ロック金具」のメーカーとして有名です。
             <br class="sp"><br class="sp"><br class="pc">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。
           </p>
