--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -38,7 +38,7 @@
               <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
               <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                 height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                PRODUCT・<a href="/product">商品リストをみる</a></p>
+                PRODUCT・<a href="/productlist">商品リストをみる</a></p>
             
               </div>
             </div>
