--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -26,7 +26,7 @@
         <ul class="nav-links">
           <li><a href="/">ホーム</a></li>
           <li><a href="/kodawari">こだわり</a></li>
-          <li><a href="#">商品</a></li>
+          <li><a href="/productlist">商品</a></li>
           <li><a href="#">English</a></li>
         </ul>
       </div>
