--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,11 +1,11 @@
 
-
+<script src="https://www.google.com/recaptcha/api.js"></script><!-- 専用スクリプトの読み込み必要 -->
 <main class="Layout_Main__dLHqI">
     <div class="Home_Contact__nbvJ6">
     <h1 class="Home_Contact_Title__KdAFZ">お問い合わせ</h1>
     <p class="Home_Contact_Text__3D7zy">お問い合わせは以下のフォームよりお送りください。<span class="kome">※</span>は必須項目です</p>
    
-    <form action="https://ssgform.com/s/NHTGZqRshncp" method="post">
+    <form action="https://ssgform.com/s/NHTGZqRshncp" method="post"id="sample-form">
         <div style="display: none;"><input type="text" name="wana" /></div>
         <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
         <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name"  placeholder="本名をご記入ください">
@@ -13,10 +13,12 @@
         <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">    
         <label class="Home_Contact_Label__hwNpu" for="message" >*お問い合わせ内容</label>
         <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5" required="required"> </textarea>
-        <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
+        <button class="g-recaptcha"
+        data-sitekey="{6LcuhAMiAAAAAAARmCpKoIg_rEO-iK-Uk_coKvXo}" type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
      </form></div>
      </main>
 
+     
 
 
 
