--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -53,7 +53,7 @@
 <p class="aboutService_text">当店では、革の種類や色を変えて製品をお作りする、「パターンオーダー」も行っております。</p>
 <ul class="c-bannerList">
   <li class="c-bannerList_node">
-    <a href="/products">
+    <a href="/productlist">
       <div class="c-bannerList_img">
         <img src="/afheaufhhf.webp" alt="当店の商品画像" >
       </div>
