--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -12,32 +12,33 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET              </div>
+          KEYCASE              </div>
         <time class="newsList_date c-newsList_date">
                       </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        二つ折り財布、ボックス型          </h3>
+       キーケース        </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="../img/newwallet2-minnn-min.jpg">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
+
     <li class="newsList_node c-newsList_node">
   <a href="/">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          BAG           </div>
+          KEYCASE          </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ドイツホックショルダーバック          </h3>
+             キーケース<br class="sp">(スマートキータイプ)   </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="../img/faffa-min.jpg">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
@@ -46,100 +47,100 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          BAG              </div>
-        <time class="newsList_date c-newsList_date">
-                     </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-        ミニ ドイツホックショルダーバック           </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="../img/ghhgha-min.jpg">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          KEYCASE            </div>
-        <time class="newsList_date c-newsList_date">
-                   </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-        ２層スマートキーケース           </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="../img/fhfggjgj-min.jpg">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          SMALL WALLET              </div>
-        <time class="newsList_date c-newsList_date">
-                   </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-      スマートラウンドウォレット        </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="../img/ghkrh44-min.jpg">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          OTHER             </div>
-        <time class="newsList_date c-newsList_date">
-                    </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-        袱紗          </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="../img/faefee-min.jpg">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          KEYCASE              </div>
-        <time class="newsList_date c-newsList_date">
-                    </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-        L型キーケース            </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="../img/agrgarrw-min.jpg">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
           WALLET              </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ３つ折り財布            </h3>
+           ラウンドウォレット       </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="../img/thresnfaff.jpg">
+      <img src="/coming.webp">
+    </div>
+  </a>
+</li>
+    <li class="newsList_node c-newsList_node">
+  <a href="/">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          WALLET           </div>
+        <time class="newsList_date c-newsList_date">
+                   </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+        ミニマムラウンドウォレット          </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/coming.webp">
+    </div>
+  </a>
+</li>
+    <li class="newsList_node c-newsList_node">
+  <a href="/">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          LONGWALLET             </div>
+        <time class="newsList_date c-newsList_date">
+                   </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+      長財布       </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/coming.webp">
+    </div>
+  </a>
+</li>
+    <li class="newsList_node c-newsList_node">
+  <a href="/">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          LONGWALLET             </div>
+        <time class="newsList_date c-newsList_date">
+                    </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+        長財布         </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/coming.webp">
+    </div>
+  </a>
+</li>
+    <li class="newsList_node c-newsList_node">
+  <a href="/">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          MIDDLEWALLET            </div>
+        <time class="newsList_date c-newsList_date">
+                    </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+        ミドルウォレット            </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/coming.webp">
+    </div>
+  </a>
+</li>
+    <li class="newsList_node c-newsList_node">
+  <a href="/">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          MIDDLEWALLET             </div>
+        <time class="newsList_date c-newsList_date">
+                     </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+        ミドルウォレット            </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
