--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -8,7 +8,7 @@
 
 <ul class="newsList c-newsList" id="postList">
     <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/keycase">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
