--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -69,7 +69,7 @@
     <h2 class="c-pageSection_title">製品のお届けについて</h2>
     <p class="c-pageSection_text">
         ご注文を頂いてから一点ずつ丁寧に手作りで製作するため、発送まで3週間程お時間を頂いております。<br>
-      ・パターンオーダーの場合には、仕入れにかかる日数を加え、発送まで１ヶ月程度お時間を頂いております。(ワニ革を使用される場合には2ヶ月となります。)<br>
+      ・パターンオーダーの場合には、仕入れにかかる日数を加え、発送まで１ヶ月程度お時間を頂いております。<br>
       ・銀行振込の場合は、ご入金確認後に発送させて頂きます。<br>
       ・ご注文受付後に納期の変更等が発生した際には別途Ｅメールでご連絡を差し上げます。
     </p>
@@ -91,7 +91,6 @@
     <p class="c-pageSection_text">
       ・商品が不良品、もしくは汚れや破損があった場合。<br>
       ・注文の商品と送られてきた商品が相違していた場合。<br>
-      ・配送中に商品が破損、汚損していた場合。<br>
       ・不良品・誤配送の際は当店負担とさせていただきます。
     </p>
     <p class="c-pageSection_text">
